# AGM

./: .gitignore  README.md  TODO.md  catkingdom.html  codex-ma  multiagent.toml  pyproject.toml  snake.html
docs/: 2026-04-24-session-reuse-plan.md
schemas/: event-log.schema.json  manifest.schema.json  sprint-state.schema.json
schemas/agent-output/: contract-feedback.schema.json  contract-proposal.schema.json  contract-resolution.schema.json  feature-execution.schema.json  holistic-review.schema.json  review-verdict.schema.json
scripts/: catkingdom_browser_smoke.py
src/codex_ma/: __main__.py  cli.py  config.py  constants.py  orchestrator.py  prompts.py  runner.py  schema.py  state.py  storage.py
task-workspaces/joker-roguelike-card/.codex-ma/schemas/agent-output/: contract-proposal.schema.json
tests/: test_cli.py  test_config.py  test_orchestrator.py  test_runner.py  test_state.py  testlib.py
